--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -15,79 +15,78 @@
 
                         /*-----------------Header-----------------*/
 .headerContainer{
-    display: flex;
     width: 100%;
-    height: 128px;
+    height: 120px;
     background-color: #232a3b;
     color: white;
+    display: flex;
     justify-content: space-between;
-    box-shadow: 1px 1px 2px 3px #1a1a1a;
 }
 
 .navLogo{
     height: auto;
-    margin-left: 150px;
     display: flex;
     justify-content: center;
     align-items: center;
 }
 
 .navButton{
+    height: auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-right:150px ;
-    cursor: pointer;
 }
 
 .navigation{
-    display: flex;
+    display:flex ;
     justify-content: center;
     align-items: center;
-    font-size:larger;
-    font-weight: bold;
 }
 
-.navigation p{
-    margin-right: 10px;
-}
-
-
-.navigation ul{
-    display: flex;
+.navigation ul {
     list-style: none;
-    flex-direction: row;
-}
+    display: flex;
+} 
 
 .navigation li{
-    margin-right: 130px;
+    margin-left: 10px;
 }
 
                         /*-----------------Content-----------------*/
+
+
 .content{
-    margin-top: 2px;
     width: 100%;
-    height: 796px;
     display: flex;
-    align-items: center;
     justify-content: center;
-    color: white;
+    align-items: center;
     background-color: #1E2430;
+    color: white;
 }
 
 .contentContainer{
     display: flex;
     align-items: center;
-    justify-content: center;
     flex-direction: column;
-    height: 100%;
-    margin-bottom: 100px;
+    flex-wrap: wrap;
+    width: 60%;
+}
+
+.Title{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    font-family:Pacifico-Regular;
 }
 
 .Inputfield{
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    color: white;
+    width: 100%;
 }
 
 .Inputfield input{
@@ -97,47 +96,42 @@
 	padding: 10px;
 	padding-left: 24px;
 	font-weight: 700;
-	width: 800px;
 	transition: .2s;
 	font-family: Raleway, sans-serif;
     font-size: medium;
     outline: none;
     color: white;
-}
-
-.Title{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-bottom: 50px;
-    font-family:Pacifico-Regular;
-}
-
-.Title h1{
-  font-weight: bold;
-  font-size:100px;
+    padding: 0;
+    width:100%;
+    margin-bottom: 20px;
+    
 }
 
 .saveButton{
     display: flex;
-    margin-top: 30px;
     width: 100%;
     justify-content: end;
-    
 }
 
 .saveButton button{
     display: flex;
-    align-items: center;
     justify-content: center;
-    width: 240px;
-    height: 90px;
-    background: #212835;
+    align-items: center;
+    color: white;
     border-radius: 15px;
     border: none;
     box-shadow:0px 4px 1px 0px #1a1a1a;
-    color: white;
+    width: 20%;
+    height: 90px;
+    background: #212835;
     cursor: pointer;
     font-family:Jomhuria;
     font-size: 80px;
+    transition-duration: 0.4s;
+}
+
+.saveButton button:hover{
+    background-color: #27303f;
+    transform: scale(1.1,1.1);
+    transition-duration: 0.4s;
 }
