--- a/src/pages/Main.css
+++ b/src/pages/Main.css
@@ -55,7 +55,11 @@
 .navigation li{
     margin-left: 60px;
     font-size: 20px;
+    color: white;
+    text-decoration: none;
 }
+
+
 
                         /*-----------------Content-----------------*/
 
